# qa_dataset_generator

./: .env.example  README.md  pyproject.toml
src/qa_dataset_generator/: crew.py  main.py
src/qa_dataset_generator/config/: agents.yaml  tasks.yaml
