[tool.poetry]
name = "qa_dataset_generator"
version = "0.1.0"
description = "qa_dataset_generator using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.28.8"}
langchain-groq = "^0.1.3"
agentops = "^0.1.6"

[tool.poetry.scripts]
qa_dataset_generator = "qa_dataset_generator.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"